--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body{
   padding-right:15px;
 }
 .row {
-  padding-bottom: 44px;
+  
 }
 .row features-head{
   padding-bottom: 0px!important;
@@ -72,6 +72,7 @@ body{
 }
 .social ul>li>i{
   color: #FCDB00!important;
+  font-size: 42px!important;
 }
 .footer-navigation{
   background-color:#010101;
